--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
         		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">blog</a></li>
         		<li><a href="/usefulthings">useful things</a></li>
+        		<li><a href="recipes">recipes</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
