--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
-    font-weight: bold;
+    font-weight: 300;
 }
 nav ul li, footer ul li {
     display: inline;
@@ -20,12 +20,12 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 3em;
+    font-size: 500;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    font-size: 1.5em;
+    font-size: 400;
     line-height: 1.4em;
     color: #333;
 }
