--- a/css/main.css
+++ b/css/main.css
@@ -20,12 +20,14 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 500;
+    font-weight: 500;
+    font-size = 1.8em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    font-size: 400;
+    font-weight: 400;
+    font=size = 1em;
     line-height: 1.4em;
     color: #333;
 }
