--- a/css/main.css
+++ b/css/main.css
@@ -1,46 +1,13 @@
-body {
-    margin: 60px auto;
-    width: 70%;
-}
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: 200;
-}
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
-}
-a {
-    text-decoration: none;
-    color: #999;
-}
-a:hover {
-    color: #ce1256;
-}
-h1 {
-    font-weight: 500;
-    font-size = 1.8em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-}
-p {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    font-weight: 300;
-    font=size = 1em;
-    line-height: 1.4em;
-    color: #333;
-}
-footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
-}
+---
+# Only the main Sass file needs front matter (the dashes are enough)
+---
+@charset "utf-8";
 
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
-}
+/* path to glyphicons */
+$icon-font-path: "/bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 
-ul.posts li {
-    list-style: none;
-}
+/* custom variable */
+$body-bg: red;
+
+/* any style customization must be before the bootstrap import */
+@import "bootstrap";
