--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
     		<ul>
         		<li><a href="mailto:laura.d.hughes@gmail.com">email</a></li>
         		<li><a href="https://github.com/flaneuse">github.com/flaneuse</a></li>
+        		<li><a href="https://twitter.com/flaneuseks">twitter</a></li>
 			</ul>
 		</footer>
 		</body>
