--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,10 +6,28 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+
+    <!-- co-authors -->
+    {% if page.co-authors %}
+    <span class="username">with {{ page.co-authors }}</span>
+    {% endif %}
+
   </header>
 
-  <article class="post-content">
-    {{ content }}
+
+  <article>
+    <div class="post-content">
+      {{ content }}
+    </div>
+
+    {% if page.img %}
+    <div class="post-img">
+      <a href="{{ page.link | prepend: site.baseurl }}">
+        <img src="{{ page.img }}"></img>
+      </a>
+    </div>
+    {% endif %}
+
   </article>
 
 </div>
