--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -189,6 +189,31 @@
   */
   .page-content {
     padding: $spacing-unit 0;
+    margin-bottom: $spacing-unit;
+
+    h2 {
+      font-size: 32px;
+
+      @include media-query($on-laptop) {
+        font-size: 28px;
+      }
+    }
+
+    h3 {
+      font-size: 26px;
+
+      @include media-query($on-laptop) {
+        font-size: 22px;
+      }
+    }
+
+    h4 {
+      font-size: 20px;
+
+      @include media-query($on-laptop) {
+        font-size: 18px;
+      }
+    }
   }
 
   .page-heading {
