lighten code font color

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -136,6 +136,7 @@ code {
     border: 1px solid $grey-color-light;
     border-radius: 3px;
     background-color: #eef;
+    color: $grey-color-medium;
 }
 
 code {
