--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,8 @@
 ---
 @charset "utf-8";
 
-
+// Link variables
+$tim-link: "https://www.linkedin.com/in/timessam";
 
 // Color variables
 $base-font-family: 'Lato', Helvetica, Arial, sans-serif;
@@ -22,6 +23,7 @@ $accent-color:     #3F817C;
 $accent-color-light:  #A6D3D1;
 
 $grey-color:       #5D6061;
+$grey-color-medium: lighten($grey-color, 10%);
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
