--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -237,6 +237,8 @@
   .post-link {
     display: block;
     font-size: 24px;
+    line-height: $base-header-height;
+    padding-bottom: 3px;
   }
 
 
