--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,7 @@ $base-font-size:   18px;
 $base-font-weight: 100;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
+$base-header-height: 1.1;
 
 $spacing-unit:     30px;
 $base-img-height: 300px;
