--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,7 +11,9 @@
 }
 
 .site-title {
+  font-family: 'Lato', Helvetica, Arial, sans-serif;
   font-size: 26px;
+  font-weight: 400;
   line-height: 56px;
   letter-spacing: -1px;
   margin-bottom: 0;
@@ -217,7 +219,8 @@
   }
 
   .page-heading {
-    font-size: 20px;
+    font-size: $largest-font-size;
+    color: $text-color;
   }
 
   .post-list {
@@ -229,14 +232,20 @@
     }
   }
 
-  .post-meta {
+  .post-date {
     font-size: $small-font-size;
+    color: $grey-color;
+  }
+
+  .post-coauthor {
+    font-size: $smaller-font-size;
     color: $grey-color;
   }
 
   .post-link {
     display: block;
-    font-size: 24px;
+    font-size: $large-font-size;
+    font-weight: $bold-font-weight;
     line-height: $base-header-height;
     padding-bottom: 3px;
   }
@@ -287,12 +296,6 @@
     width: 58%;
     overflow:hidden;
   }
-
-
-
-
-
-
 
 
 
