cleaning up css

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,8 @@
 
   <!-- Google fonts -->
   <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans|Lato|Source+Sans+Pro|Alegreya+Sans|Josefin+Sans|Work+Sans|Alegreya+Sans+SC:400,400italic|Khula|Yantramanav|Martel+Sans|Palanquin|Bubbler+One' rel='stylesheet' type='text/css'> -->
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Raleway:100,200,300,400,500,600,700,800,900|Source+Sans+Pro:200,300,400,600,700" rel="stylesheet">
+  <!-- |Raleway:100,200,300,400,500,600,700,800,900|Source+Sans+Pro:200,300,400,600,700 -->
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
