--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -41,7 +41,9 @@ ul, ol, dl, figure,
     color: $text-color;
 }
 
-
+h1, h2, h3, h4, h5, h6{
+      line-height: $base-header-height;
+}
 
 /**
  * Images
