--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 
       <div class="trigger">
         <!-- home page link -->
-        <a class="page-link" href="{{ site.baseurl }}/index.html">home</a>
+        <a class="page-link" href="{{ site.baseurl }}/index.html">portfolio</a>
 
         <!-- nav bar for each page -->
         {% for page in site.pages %}
