--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -252,6 +252,13 @@
     line-height: 1;
   }
 
+  .post-descrip {
+    font-size: $large-font-size;
+    color: $grey-color;
+    line-height: 1.1;
+    padding-top: 20px;
+  }
+
   .post-link {
     display: block;
     font-size: $large-font-size;
@@ -303,6 +310,8 @@
   }
   .post-img {
     padding-left: 2%;
+    padding-top: 10px;
+    float: right;
     width: 58%;
     overflow:hidden;
   }
