--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -43,6 +43,7 @@ ul, ol, dl, figure,
 
 h1, h2, h3, h4, h5, h6{
       line-height: $base-header-height;
+      font-weight: $bold-font-weight;
 }
 
 /**
