--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,4 +43,6 @@ layout: default
 
   </article>
 
+  <div id="return"><a href="{{ site.baseurl }}/index.html">return to portfolio</a></div>
+
 </div>
