--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,6 +60,10 @@
           </li>
           {% endif %}
 
+          <li>
+            <span class="username">&copy; 2016 Laura D. Hughes All Rights Reserved.</span>
+          </li>
+
         </ul>
       </div>
 
