--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -297,7 +297,6 @@
     padding: 10px;
   }
   .post-content {
-    width: 40%;
     float: left;
     overflow:hidden;
     margin-bottom: $spacing-unit;
@@ -326,6 +325,11 @@
       }
     }
   }
+
+  .post-left {
+        width: 40%;
+  }
+  
   .post-img {
     padding-left: 2%;
     padding-top: 10px;
