--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -256,6 +256,12 @@
     line-height: 1.1;
   }
 
+  .post-icon {
+    border: 1px solid $grey-color;
+    width: 100%;
+    height: 76.5%;
+  }
+
   .post-descrip {
     font-size: $large-font-size;
     color: $grey-color;
@@ -329,7 +335,7 @@
   .post-left {
         width: 40%;
   }
-  
+
   .post-img {
     padding-left: 2%;
     padding-top: 10px;
