change return text color

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -370,6 +370,12 @@
 
   #return {
     text-align: center;
+    a {
+      color: $accent-color-light;
+    }
+    a:visited {
+      color: $accent-color;
+    }
   }
 
 #projects, #resources {
