update to dynamic date

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -61,7 +61,7 @@
           {% endif %}
 
           <li>
-            <span class="username">&copy; 2016 Laura D. Hughes All Rights Reserved.</span>
+            <span class="username">&copy; {{ 'now' | date: "%Y"}} Laura D. Hughes All Rights Reserved.</span>
           </li>
 
         </ul>
