--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,7 @@
       <div class="trigger">
         <!-- home page link -->
         <a class="page-link" href="{{ site.baseurl }}/index.html">portfolio</a>
+        <a class="page-link" href="https://scholar.google.com/citations?user=xl50ysYAAAAJ" target="_blank">publications</a>
 
         <!-- nav bar for each page -->
         {% for page in site.pages %}
